--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>U.S. Election Map</title>
+  <title>U.S. Election Map - Presidential Election 2016</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -29,6 +29,7 @@
   <div class="page">
     <header>
         <h1>U.S. ELECTION MAP</h1>
+        <h3>Presidential Election 2016</h3>
     </header>
 
     <div class="map-container">
@@ -45,12 +46,12 @@
             </theader>
             <tbody>
             <tr>
-                <td class="name-1">NAME1</td>
-                <td class="name-1">RESULTS1</td>
+                <td class="name-1">Donald Trump</td>
+                <td class="name-1">RESULTS</td>
             </tr>
             <tr>
-                <td class="name-2">NAME2</td>
-                <td class="name-2">RESULTS2</td>
+                <td class="name-2">Hilary Clinton</td>
+                <td class="name-2">REULTS</td>
             </tr>
             <tr>
                 <td class="winner">WINNER:</td>
@@ -62,16 +63,15 @@
         <table id='countryResults' style="position:absolute; top:10px; left:10px;">
             <tbody>
             <tr>
-                <td class="name-1">NAME1</td>
-                <td class="name-1">RESULTS1</td>
-                <td class="name-2">NAME2</td>
-                <td class="name-2">RESULTS2</td>
+                <td class="name-1">Donald Trump</td>
+                <td class="name-1">RESULTS</td>
+                <td class="name-2">Hilary Clinton</td>
+                <td class="name-2">RESULTS</td>
                 <th>WINNER</th>
                 <th>Name</th>
             </tr>
             </tbody>
         </table>
-
     </div>
     <br clear="all">
     <footer>
